# classical_diffusion

./: .gitignore  README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
classical_diffusion/: Langevin.py  __init__.py  analysis.py  plot.py  scripts.py  solve.py  theme.py  util.py
classical_diffusion/langevin/: __init__.py  _analysis.py  _langevin.py  analysis.py
classical_diffusion/system/: __init__.py  _analysis.py  _system.py  analysis.py
docs/source/: conf.py  index.rst
examples/: 1d.flat.py  1d.periodic.py  1d_system.py  2d.flat.py  2d.periodic.py  2d_system.py  analytical_isf.py  distribution.py  effective_mass.py  example.py  harmonic.py  harmonic_convergance.py  harmonic_langevin.py  periodic.py  periodic_isf.py  periodic_langevin.py  temp.2.py  temp.py
tests/: import_test.py
