[project]
name = "classical_diffusion"
version = "0.0.1"
description = "An example Python Package"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "diffrax>=0.7.2",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "sympy>=1.14.0",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest >=9.0.0,<10.0.0",
    "sphinx >=9.1.0,<10.0.0",
    "pydata-sphinx-theme >=0.18.0,<0.19.0",
    "ty>=0.0.56",
]


[tool.ruff]
unsafe-fixes = true
exclude = [".git", ".git-rewrite", ".vscode"]

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "missing-trailing-comma",
    "line-too-long",
    "assert",
    "pytest-unittest-assertion",
    "undocumented-public-module",
    "undocumented-magic-method",
    "missing-copyright-notice",
    "missing-todo-link",
    "missing-todo-author",
    "docstring-missing-returns",
    "docstring-missing-yields",
    "PD",
]
fixable = ["ALL"]
unfixable = ["print"]


[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["no-self-use", "too-many-locals", "undocumented-public-class", "undocumented-public-method", "undocumented-public-function", "undocumented-public-package"]
"examples/**/*" = ["implicit-namespace-package", "print"]
"scripts/**/*" = ["implicit-namespace-package", "print", "undocumented-public-class", "undocumented-public-method", "undocumented-public-function", "undocumented-public-package"]
"docs/**/*" = ["implicit-namespace-package", "missing-required-import"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "__as_fundamental__",
    "__from_fundamental__",
    "__into_fundamental__",
    "__as_transformed__",
    "__into_transformed__",
    "__from_transformed__",
    "__convert_vector_into__",
    "__into_inner__",
    "__from_inner__",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
